--- a/src/assets/ZSM-TimeTable/variables.scss
+++ b/src/assets/ZSM-TimeTable/variables.scss
@@ -1,10 +1,12 @@
 $icomoon-font-family: 'ZSM-TimeTable' !default;
 $icomoon-font-path: '/src/assets/ZSM-TimeTable/fonts' !default;
 
-$zsm-chevron-down-icon: '\e900';
-$zsm-user-graduate-icon: '\e901';
-$zsm-chalkboard-user-icon: '\e902';
-$zsm-door-closed-icon: '\e903';
+$zsm-menu-icon: '\e900';
+$zsm-close-icon: '\e901';
+$zsm-chevron-icon: '\e902';
+$zsm-student-icon: '\e903';
+$zsm-teacher-icon: '\e904';
+$zsm-room-icon: '\e905';
 $zsm-print-icon: '\e906';
-$zsm-clock-icon: '\e904';
-$zsm-copyright-icon: '\e905';
+$zsm-clock-icon: '\e907';
+$zsm-copyright-icon: '\e908';
