--- a/src/assets/ZSM-TimeTable/variables.scss
+++ b/src/assets/ZSM-TimeTable/variables.scss
@@ -3,10 +3,11 @@ $icomoon-font-path: '/src/assets/ZSM-TimeTable/fonts' !default;
 
 $zsm-menu-icon: '\e900';
 $zsm-close-icon: '\e901';
-$zsm-chevron-icon: '\e902';
-$zsm-student-icon: '\e903';
-$zsm-teacher-icon: '\e904';
-$zsm-room-icon: '\e905';
-$zsm-print-icon: '\e906';
-$zsm-clock-icon: '\e907';
-$zsm-copyright-icon: '\e908';
+$zsm-download-icon: '\e902';
+$zsm-chevron-icon: '\e903';
+$zsm-student-icon: '\e904';
+$zsm-teacher-icon: '\e905';
+$zsm-room-icon: '\e906';
+$zsm-print-icon: '\e907';
+$zsm-clock-icon: '\e908';
+$zsm-copyright-icon: '\e909';
