--- a/src/assets/ZSM-TimeTable/variables.scss
+++ b/src/assets/ZSM-TimeTable/variables.scss
@@ -1,5 +1,5 @@
 $icomoon-font-family: 'ZSM-TimeTable' !default;
-$icomoon-font-path: '/src/assets/ZSM-TimeTable/fonts' !default;
+$icomoon-font-path: '/assets/fonts' !default;
 
 $zsm-menu-icon: '\e900';
 $zsm-close-icon: '\e901';
