--- a/src/assets/ZSM-TimeTable/variables.scss
+++ b/src/assets/ZSM-TimeTable/variables.scss
@@ -11,3 +11,4 @@ $zsm-room-icon: '\e906';
 $zsm-print-icon: '\e907';
 $zsm-clock-icon: '\e908';
 $zsm-copyright-icon: '\e909';
+$zsm-empty-icon: '\e90a';
