--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,2 +1,39 @@
+$enable-negative-margins: true;
 @import '~bootstrap/scss/bootstrap';
 @import 'ZSM-TimeTable/style';
+
+// Animations
+@keyframes blink {
+	0%,
+	100% {
+		background-color: rgba(var(--bs-info-rgb), 1);
+	}
+	50% {
+		background-color: transparent;
+	}
+}
+@keyframes swing {
+	0%,
+	30%,
+	50%,
+	70%,
+	100% {
+		transform: rotate(0deg);
+	}
+
+	10% {
+		transform: rotate(10deg);
+	}
+
+	40% {
+		transform: rotate(-10deg);
+	}
+
+	60% {
+		transform: rotate(5deg);
+	}
+
+	80% {
+		transform: rotate(-5deg);
+	}
+}
