--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,39 +1,63 @@
 $enable-negative-margins: true;
+$zindex-levels: (
+  n1: -1,
+  0: 0,
+  1: 1,
+  2: 2,
+  3: 3,
+  4: 4,
+  5: 5,
+  6: 6,
+  7: 7,
+  999: 999,
+);
+.minh-100 {
+  min-height: 100% !important;
+}
+.translate-0-0 {
+  transform: translate(0, 0) !important;
+}
+.inset-0 {
+  inset: 0 !important;
+}
+.object-position-center {
+  object-position: center !important;
+}
 @import '~bootstrap/scss/bootstrap';
 @import 'ZSM-TimeTable/style';
 
 // Animations
 @keyframes blink {
-	0%,
-	100% {
-		background-color: rgba(var(--bs-info-rgb), 1);
-	}
-	50% {
-		background-color: transparent;
-	}
+  0%,
+  100% {
+    background-color: rgba(var(--bs-info-rgb), 1);
+  }
+  50% {
+    background-color: transparent;
+  }
 }
 @keyframes swing {
-	0%,
-	30%,
-	50%,
-	70%,
-	100% {
-		transform: rotate(0deg);
-	}
+  0%,
+  30%,
+  50%,
+  70%,
+  100% {
+    transform: rotate(0deg);
+  }
 
-	10% {
-		transform: rotate(10deg);
-	}
+  10% {
+    transform: rotate(10deg);
+  }
 
-	40% {
-		transform: rotate(-10deg);
-	}
+  40% {
+    transform: rotate(-10deg);
+  }
 
-	60% {
-		transform: rotate(5deg);
-	}
+  60% {
+    transform: rotate(5deg);
+  }
 
-	80% {
-		transform: rotate(-5deg);
-	}
+  80% {
+    transform: rotate(-5deg);
+  }
 }
