Update print view

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -11,6 +11,9 @@ $zindex-levels: (
   7: 7,
   999: 999,
 );
+.minw-auto {
+  min-width: auto !important;
+}
 .minh-100 {
   min-height: 100% !important;
 }
