--- a/src/assets/ZSM-TimeTable/style.scss
+++ b/src/assets/ZSM-TimeTable/style.scss
@@ -1,80 +1,96 @@
 @import 'variables';
 
 @font-face {
-	font-family: '#{$icomoon-font-family}';
-	src: url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2') format('woff2'), url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff') format('woff'),
-		url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;
+  font-family: '#{$icomoon-font-family}';
+  src: url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2') format('woff2'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
 i {
-	/* use !important to prevent issues with browser extensions that change fonts */
-	font-family: '#{$icomoon-font-family}' !important;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: '#{$icomoon-font-family}' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .zsm-menu-icon {
-	&:before {
-		content: $zsm-menu-icon;
-	}
+  &:before {
+    content: $zsm-menu-icon;
+  }
 }
 .zsm-close-icon {
-	&:before {
-		content: $zsm-close-icon;
-	}
+  &:before {
+    content: $zsm-close-icon;
+  }
 }
 .zsm-download-icon {
-	&:before {
-		content: $zsm-download-icon;
-	}
+  &:before {
+    content: $zsm-download-icon;
+  }
 }
 .zsm-chevron-icon {
-	&:before {
-		content: $zsm-chevron-icon;
-	}
+  &:before {
+    content: $zsm-chevron-icon;
+  }
 }
 .zsm-student-icon {
-	&:before {
-		content: $zsm-student-icon;
-	}
+  &:before {
+    content: $zsm-student-icon;
+  }
 }
 .zsm-teacher-icon {
-	&:before {
-		content: $zsm-teacher-icon;
-	}
+  &:before {
+    content: $zsm-teacher-icon;
+  }
 }
 .zsm-room-icon {
-	&:before {
-		content: $zsm-room-icon;
-	}
+  &:before {
+    content: $zsm-room-icon;
+  }
 }
 .zsm-print-icon {
-	&:before {
-		content: $zsm-print-icon;
-	}
+  &:before {
+    content: $zsm-print-icon;
+  }
 }
 .zsm-clock-icon {
-	&:before {
-		content: $zsm-clock-icon;
-	}
+  &:before {
+    content: $zsm-clock-icon;
+  }
 }
 .zsm-copyright-icon {
-	&:before {
-		content: $zsm-copyright-icon;
-	}
+  &:before {
+    content: $zsm-copyright-icon;
+  }
 }
-.zsm-empty-icon {
-	&:before {
-		content: $zsm-empty-icon;
-	}
+.zsm-empty-error-icon {
+  &:before {
+    content: $zsm-empty-error-icon;
+  }
+}
+.zsm-not-found-error-icon {
+  &:before {
+    content: $zsm-not-found-error-icon;
+  }
+}
+.zsm-offline-error-icon {
+  &:before {
+    content: $zsm-offline-error-icon;
+  }
+}
+.zsm-unknown-error-icon {
+  &:before {
+    content: $zsm-unknown-error-icon;
+  }
 }
