--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,4 +1,21 @@
+// Bootstrap
+$enable-dark-mode: false;
+$enable-transitions: false;
+$enable-container-classes: false;
+$enable-caret: false;
+$enable-rfs: false;
+$enable-validation-icons: false;
 $enable-negative-margins: true;
+
+$theme-colors: (
+  'primary': #0d6efd,
+  'light': #f8f9fa,
+);
+
+$grid-breakpoints: (
+  xs: 0,
+);
+
 $zindex-levels: (
   n1: -1,
   0: 0,
@@ -11,6 +28,21 @@ $zindex-levels: (
   7: 7,
   999: 999,
 );
+
+@import '@bootstrap/functions';
+@import '@bootstrap/variables';
+@import '@bootstrap/maps';
+@import '@bootstrap/mixins';
+@import '@bootstrap/utilities';
+@import '@bootstrap/root';
+@import '@bootstrap/reboot';
+@import '@bootstrap/grid';
+@import '@bootstrap/tables';
+@import '@bootstrap/helpers/position';
+@import '@bootstrap/utilities/api';
+
+@import 'ZSM-TimeTable/style';
+
 .minw-auto {
   min-width: auto !important;
 }
@@ -26,14 +58,12 @@ $zindex-levels: (
 .object-position-center {
   object-position: center !important;
 }
-@import '~bootstrap/scss/bootstrap';
-@import 'ZSM-TimeTable/style';
 
 // Animations
 @keyframes blink {
   0%,
   100% {
-    background-color: rgba(var(--bs-info-rgb), 1);
+    background-color: rgba(13, 202, 240, 1);
   }
   50% {
     background-color: transparent;
@@ -67,15 +97,15 @@ $zindex-levels: (
 
 @media print {
   body {
-    orientation: landscape;
-    size: auto;
     height: 100vh;
     width: 100vw;
   }
-}
-@page {
-  margin: 0.5cm;
-  @top-center {
-    content: 'Wydrukowano z ZSM TimeTable';
+  @page {
+    orientation: landscape !important;
+    size: landscape !important;
+    margin: 0.5cm;
+    @top-center {
+      content: 'Wydrukowano z ZSM TimeTable';
+    }
   }
 }
