--- a/src/assets/ZSM-TimeTable/variables.scss
+++ b/src/assets/ZSM-TimeTable/variables.scss
@@ -11,7 +11,8 @@ $zsm-room-icon: '\e906';
 $zsm-print-icon: '\e907';
 $zsm-clock-icon: '\e908';
 $zsm-copyright-icon: '\e909';
-$zsm-empty-error-icon: '\e90a';
-$zsm-not-found-error-icon: '\e90b';
-$zsm-offline-error-icon: '\e90c';
-$zsm-unknown-error-icon: '\e90d';
+$zsm-loading-icon: '\e90a';
+$zsm-empty-error-icon: '\e90b';
+$zsm-not-found-error-icon: '\e90c';
+$zsm-offline-error-icon: '\e90d';
+$zsm-unknown-error-icon: '\e90e';
