--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -64,6 +64,14 @@ $zindex-levels: (
 }
 
 // Animations
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(1turn);
+  }
+}
 @keyframes blink {
   0%,
   100% {
