--- a/src/assets/ZSM-TimeTable/variables.scss
+++ b/src/assets/ZSM-TimeTable/variables.scss
@@ -1,18 +1,26 @@
 $icomoon-font-family: 'ZSM-TimeTable' !default;
 $icomoon-font-path: '/assets/fonts' !default;
 
-$zsm-menu-icon: '\e900';
-$zsm-close-icon: '\e901';
-$zsm-download-icon: '\e902';
-$zsm-chevron-icon: '\e903';
-$zsm-student-icon: '\e904';
-$zsm-teacher-icon: '\e905';
-$zsm-room-icon: '\e906';
-$zsm-print-icon: '\e907';
-$zsm-clock-icon: '\e908';
-$zsm-copyright-icon: '\e909';
-$zsm-loading-icon: '\e90a';
-$zsm-empty-error-icon: '\e90b';
-$zsm-not-found-error-icon: '\e90c';
-$zsm-offline-error-icon: '\e90d';
-$zsm-unknown-error-icon: '\e90e';
+$zsm-menu-icon: "\e900";
+$zsm-close-icon: "\e901";
+$zsm-download-icon: "\e902";
+$zsm-chevron-icon: "\e903";
+$zsm-student-icon: "\e904";
+$zsm-teacher-icon: "\e905";
+$zsm-room-icon: "\e906";
+$zsm-print-icon: "\e907";
+$zsm-clock-icon: "\e908";
+$zsm-copyright-icon: "\e909";
+$zsm-loading-icon: "\e90a";
+$zsm-empty-error-icon: "\e90b";
+$zsm-not-found-error-icon: "\e90c";
+$zsm-offline-error-icon: "\e90d";
+$zsm-unknown-error-icon: "\e910";
+$zsm-generator-new-icon: "\e90e";
+$zsm-generator-current-icon: "\e90f";
+$zsm-specialities-icon: "\e911";
+$zsm-teachers-icon: "\e912";
+$zsm-subjects-icon: "\e913";
+$zsm-data-add-icon: "\e914";
+$zsm-data-edit-icon: "\e915";
+$zsm-data-remove-icon: "\e916";
