--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -36,7 +36,7 @@
 	}
 	@page {
 		orientation: landscape !important;
-		size: landscape !important;
+		size: A4 landscape !important;
 		margin: 0.5cm;
 	}
 }
