--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,5 +1,6 @@
 $sidebar-width: 240px;
 $header-height: 48px;
+$accent-color: #2196f3;
 
 // Light
 $l-bg-timetable: #b9d8e6;
@@ -9,7 +10,7 @@ $l-sb-text: #5d5d5d;
 $l-tt-text: #000;
 $l-tt-primary: $l-bg-timetable;
 $l-tt-secondary: darken($l-tt-primary, 2.5);
-$l-bg-scrollbar: #B0BBBF;
+$l-bg-scrollbar: #b0bbbf;
 $l-scrollbar: darken($l-bg-scrollbar, 25);
 // Dark
 $d-bg-timetable: #181919;
@@ -19,5 +20,5 @@ $d-sb-text: #ccc;
 $d-tt-text: #ccc;
 $d-tt-primary: $d-bg-timetable;
 $d-tt-secondary: lighten($d-tt-primary, 10);
-$d-bg-scrollbar: #B0BBBF;
+$d-bg-scrollbar: #b0bbbf;
 $d-scrollbar: darken($d-bg-scrollbar, 25);
