--- a/src/assets/_animations.scss
+++ b/src/assets/_animations.scss
@@ -9,7 +9,7 @@
 @keyframes blink {
 	0%,
 	100% {
-		background-color: rgba(13, 202, 240, 1);
+		background-color: rgba($accent-color, 0.75);
 	}
 	50% {
 		background-color: transparent;
