--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -62,6 +62,9 @@
 ::-webkit-scrollbar-track {
 	background-color: var(--bg-scrollbar);
 	margin: 0 0 0 0.25em;
+	@include tablet {
+		margin: 0;
+	}
 	border-radius: 100vw;
 }
 ::-webkit-scrollbar-corner {
