--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -61,7 +61,7 @@
 }
 ::-webkit-scrollbar-track {
 	background-color: var(--bg-scrollbar);
-	margin: 0 0 0 0.25em;
+	margin: 0 0 0 0.25rem;
 	@include tablet {
 		margin: 0;
 	}
@@ -73,7 +73,7 @@
 ::-webkit-scrollbar-thumb {
 	border-radius: 100vw;
 	background-color: var(--scrollbar);
-	border: 0.2em solid var(--bg-scrollbar);
+	border: 0.2rem solid var(--bg-scrollbar);
 }
 
 .v-popper__popper {
