--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -34,6 +34,9 @@
 		height: 100vh;
 		width: 100vw;
 	}
+	.preventPrint *:not(.warnPrint) {
+		display: none !important;
+	}
 	@page {
 		orientation: landscape !important;
 		size: A4 landscape !important;
