--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -34,7 +34,7 @@
 		height: 100vh;
 		width: 100vw;
 	}
-	.preventPrint *:not(.warnPrint)  {
+	.preventPrint *:not(.warnPrint):not(.warnPrint *) {
 		display: none !important;
 	}
 	@page {
